--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "com.jamesonsaunders.houstonzoo",
-  "appName": "Houston Zoo",
+  "appId": "xyz.comit//https:",
+  "appName": "uphere",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
